# opencc-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: convert.rs  error.rs  input.rs  main.rs
tests/: integration.rs
