[package]
name = "opencc-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ferrous-opencc = { version = "0.3", features = ["s2t-conversion", "t2s-conversion", "japanese-conversion"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
